5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1601_2043.log
== TEST (2019-03-21 14:39:01) 
-- CODE:
n1 = int(input())
n2 = int(input())
n3 = int(input())
n4 = int(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4)
print(media)			
-- ERROR:
File "XXXX", line 7
    print(media)			
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:39:33) 
-- CODE:
n1 = int(input())
n2 = int(input())
n3 = int(input())
n4 = int(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4)
			print(media)
-- ERROR:
File "XXXX", line 7
    print(media)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:40:21) 
-- CODE:
n1 = int(input())
n2 = int(input())
n3 = int(input())
n4 = int(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4)
			print(round(media, 2))
-- ERROR:
File "XXXX", line 7
    print(round(media, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:40:50) 
-- CODE:
n1 = int(input())
n2 = int(input())
n3 = int(input())
n4 = int(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4)
			
			print(round(media, 2))
-- ERROR:
File "XXXX", line 8
    print(round(media, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:41:14) 
-- CODE:
n1 = int(input())
n2 = int(input())
n3 = int(input())
n4 = int(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4)
			
print(media)
-- ERROR:
File "XXXX", line 8
    print(media)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:42:02) 
-- CODE:
n1 = int(input())
n2 = int(input())
n3 = int(input())
n4 = int(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4)
			
print(media)
-- ERROR:
File "XXXX", line 8
    print(media)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:42:18) 
-- CODE:
n1 = int(input())
n2 = int(input())
n3 = int(input())
n4 = int(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4)
			
print(media)
-- ERROR:
File "XXXX", line 8
    print(media)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:42:18) 
-- CODE:
n1 = int(input())
n2 = int(input())
n3 = int(input())
n4 = int(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4)
			
print(media)
-- EXECUTION TIME:
0.154978
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 8
    print(media)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:42:23) 
-- CODE:
n1 = int(input())
n2 = int(input())
n3 = int(input())
n4 = int(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4)
			
print(media)
-- ERROR:
File "XXXX", line 8
    print(media)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:45:38) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4)
			
print(media)
-- EXECUTION TIME:
0.119755
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 8
    print(media)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:46:08) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4)
			
print(round(media)
-- EXECUTION TIME:
0.120034
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 8
    print(round(media)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:46:18) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4)
			
print(round(media,2)
-- EXECUTION TIME:
0.130209
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 8
    print(round(media,2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:48:26) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4))
			
print(round(media,2)
-- ERROR:
File "XXXX", line 9
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:49:40) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4))
print(round(media,2)
-- ERROR:
File "XXXX", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:50:03) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4))
print(round(media,2))
-- OUTPUT:
47.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:51:06) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4))
print(round(media,2))
-- EXECUTION TIME:
0.188341
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
47.11
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
43.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
44.62
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:22:12) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4)/(n1+n2+n3+n4))
print(round(media,2))
-- OUTPUT:
47.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:25:17) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media1 = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4))
media2 = (n1+n2+n3+n4)
mm = (media1/media2)
print(round(mm,2))
-- OUTPUT:
2.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:27:00) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media1 = ((n1 * 1)+(n2 * 2)+(n3 * 3)+(n4 * 4))
media2 = (n1+n2+n3+n4)
mm = (media1/media2)
print(round(mm,2))
-- EXECUTION TIME:
0.122887
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
2.52
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:38:29) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

from math import *
media = (n1*1+n2*2+n3*3+n4*4) / (1+2+3+4)
print(media)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:38:40) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

from math import *
media = (n1*1+n2*2+n3*3+n4*4) / (1+2+3+4)
print(media)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:38:49) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

from math import *
media = (n1*1+n2*2+n3*3+n4*4) / (1+2+3+4)
print(media)
-- EXECUTION TIME:
0.251533
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936000000000002
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:40:29) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())
p1 = 1
p2 = 2
p3 = 3
p4 = 4

from math import *
m = (n1*p1+n2*p2+n3*p3+n4*p4) / (p1+p2+p3+p4)
print(m)
-- EXECUTION TIME:
0.164314
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936000000000002
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:41:33) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())
p1 = 1
p2 = 2
p3 = 3
p4 = 4

from math import *
m = (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
print(m)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:41:49) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())
p1 = 1
p2 = 2
p3 = 3
p4 = 4

from math import *
m = (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
print(m)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:44:51) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())
p1 = n1*1
p2 = n2*2
p3 = n3*3
p4 = n4*4
print((p1p2+p3+p4)/10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print((p1p2+p3+p4)/10)
NameError: name 'p1p2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:45:13) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())
p1 = n1*1
p2 = n2*2
p3 = n3*3
p4 = n4*4
print((p1+p2+p3+p4)/10)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:45:24) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())
p1 = n1*1
p2 = n2*2
p3 = n3*3
p4 = n4*4
print((p1+p2+p3+p4)/10)
-- EXECUTION TIME:
0.193143
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936000000000002
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:46:49) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())
p1 = 1
p2 = 2
p3 = 3
p4 = 4
from math import *
m = round((n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4))
print(m)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:47:49) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())
p1 = 1
p2 = 2
p3 = 3
p4 = 4
from math import *
media = (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
m = round(m,2)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    m = round(m,2)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:48:05) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())
p1 = 1
p2 = 2
p3 = 3
p4 = 4
from math import *
media = (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
m = round(m,2)
print(m)
-- EXECUTION TIME:
0.236929
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 11, in <module>
    m = round(m,2)
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:50:35) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())
p1 = 1
p2 = 2
p3 = 3
p4 = 4

media = (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
print(round(media,2))
-- EXECUTION TIME:
0.169033
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:56:06) 
-- CODE:
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())
p1 = 1
p2 = 2
p3 = 3
p4 = 4

media = (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
print(round(media,2))
-- EXECUTION TIME:
0.155254
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
